# jumpy

./: .gitignore  Jumpy.cabal  LICENSE  README.md  run  run-prof
src/: Blocks.hs  Game.hs  Hitbox.hs  Main.hs  Player.hs  Types.hs  Utils.hs
