name:                Jumpy
version:             0.1.0.0
synopsis:            A platformer that uses lenses and the state monad.
license:             MIT
license-file:        LICENSE
author:              John Owen
maintainer:          JohnOwen357@gmail.com
stability:           stable
build-type:          Simple
cabal-version:       >=1.8

executable Jumpy
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -O2 -fno-warn-missing-fields
  extensions:          TemplateHaskell, RecordWildCards
  build-depends:       base ==4.6.*,
                       time ==1.4.*,
                       random ==1.0.*,
                       SDL ==0.6.*,
                       SDL-ttf ==0.6.*,
                       mtl ==2.1.*,
                       lens ==4.1.*,
                       monad-loops ==0.4.*